3.nginx_routing/2.ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: sg
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-nginx
  template:
    metadata:
      labels:
        app: my-nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports: 
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: sg
spec:
# Ingress를 적용하기 위해 ClusterIp로 변경
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: my-nginx

---
# ingress-controller 설치는 별도 필요
# ingress-controller도 nginx기반으로 구성돼있음.
# ingress-controller를 설치시에 alb생성되고, Ingress자원과 함께 서비스 라우팅 수행
# ingress controller 1개에서 여러개의 ingress로 라우팅
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/aws/deploy.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ingress
  namespace: sg
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1 #첫번째 prefix제거후 endpoint 전달

spec:
  rules:
  - host: server.kimseonguk197.shop
    http:
      paths:
      - path: /product-service/(.*) 
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /order-service/(.*) 
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
